# mdvs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  cog.toml  deny.toml  release.toml
.ast-grep/rules/: panic-in-production.yml
.github/workflows/: audit.yml  book.yml  bump.yml  ci.yml  commits.yml
archive/mdvs/: Cargo.toml
archive/mdvs-schema/: Cargo.toml
archive/mdvs-schema/src/: discovery.rs  field_def.rs  field_type.rs  inference.rs  lib.rs  lock.rs  schema.rs
archive/mdvs/src/: embed.rs
archive/mdvs/src/storage/: mod.rs
assets/: README.md  demo.cast  demo.py
assets/demo_kb/: .gitignore
book/: book.toml
book/src/: SUMMARY.md  commands.md  concepts.md  configuration.md  getting-started.md  introduction.md  recipes.md  search-guide.md
crates/mdvs/: CHANGELOG.md  Cargo.toml
crates/mdvs-schema/: Cargo.toml
crates/mdvs/examples/: probe_lance_incremental.rs  profile_pipeline.rs
crates/mdvs/examples/opencode-plugin/: mdvs-hooks.ts
crates/mdvs/scaffolding/hooks/claude-code/: search-nudge.sh  settings.json  validate.sh
crates/mdvs/scaffolding/hooks/codex/: hooks.json  search-nudge.sh  validate.sh
crates/mdvs/scaffolding/hooks/cursor/: hooks.json  search-nudge.sh  validate.sh
crates/mdvs/scaffolding/skill/: SKILL.md
crates/mdvs/scaffolding/snippet/: agents-md.md  cursor-rules.mdc
crates/mdvs/skills/mdvs/: SKILL.md
crates/mdvs/src/: block.rs  chunk.rs  db.rs  frontmatter.rs  lib.rs  main.rs  output.rs  preprocess.rs  render.rs  search.rs  step.rs  table.rs  types.rs
crates/mdvs/src/cmd/: build.rs  check.rs  clean.rs  export_jsonschema.rs  info.rs  init.rs  mod.rs  search.rs  update.rs
crates/mdvs/src/cmd/check/: collect.rs  field_meta.rs  mod.rs  validate.rs
crates/mdvs/src/cmd/hook/: handle.rs  mod.rs
crates/mdvs/src/cmd/scaffold/: hook.rs  mod.rs  skill.rs  snippet.rs
crates/mdvs/src/discover/: field_type.rs  scan.rs
crates/mdvs/src/discover/infer/: mod.rs  paths.rs  types.rs
crates/mdvs/src/discover/infer/constraints/: categories.rs  mod.rs  range.rs
crates/mdvs/src/index/: backend.rs  chunk.rs  embed.rs  mod.rs  storage.rs
crates/mdvs/src/index/backend/: mod.rs  read.rs  search.rs  where_translator.rs
crates/mdvs/src/outcome/: classify.rs  config.rs  index.rs  infer.rs  mod.rs  validate.rs
crates/mdvs/src/outcome/commands/: build.rs  check.rs  clean.rs  export_jsonschema.rs  info.rs  init.rs  mod.rs  search.rs
crates/mdvs/src/scaffold/: mod.rs  platform.rs  template.rs
crates/mdvs/src/schema/: config.rs  json_schema.rs  load.rs  mod.rs  shared.rs
crates/mdvs/src/schema/constraints/: categories.rs  length.rs  mod.rs  pattern.rs  range.rs
crates/mdvs/src/schema/json_schema/: from_canonical.rs  mod.rs  to_canonical.rs  validate.rs
crates/mdvs/src/storage/: parquet.rs
crates/mdvs/tests/: multi_format_frontmatter.rs
crates/mdvs/tests/fixtures/frontmatter-json/: book.md  nested.md  release.md
crates/mdvs/tests/fixtures/frontmatter-mixed/: json-note.md  toml-note.md  yaml-note.md
crates/mdvs/tests/fixtures/frontmatter-toml/: book.md  nested.md  release.md
crates/mfv/: Cargo.toml
crates/mfv/src/: diagnostic.rs  diff.rs  extract.rs  lib.rs  main.rs  output.rs  scan.rs  validate.rs
crates/mfv/src/cmd/: check.rs  diff.rs  init.rs  mod.rs  update.rs
crates/mfv/src/report/: diagnostic.rs  mod.rs  validate.rs
crates/mfv/src/scan/: walk.rs
crates/mfv/tests/: check_tests.rs  diff_tests.rs  init_tests.rs  scan_tests.rs  update_tests.rs
crates/tomljson/: Cargo.toml  README.md
crates/tomljson/src/: de.rs  error.rs  lib.rs  ser.rs
crates/tomljson/tests/: baseline.rs  decode.rs  encode.rs
docs/: crate-plan.md  decisions.md  v03-config-design.md
docs/benchmarks/: report.md  report.py  run.py
docs/book/: book.toml
docs/spec/: 01-terminology.md  architecture.md  cocogitto.md  inference.md  output-format.md  release.md  scaffolding.md  search.md  shared.md  storage.md  terminology.md
example_kb/: .gitignore  AGENTS.md  README.md  lab-values.md  mdvs.toml  scratch.md
example_kb/.claude/: settings.json
example_kb/.codex/: hooks.json
example_kb/.cursor/: hooks.json
example_kb/people/: giulia-ferretti.md  marco-bianchi.md  remo.md  sara-dellacqua.md
example_kb/reference/: glossary.md  quick-start.md  tools.md
notebooks/: 01-duckdb-vss.ipynb  02-model2vec.ipynb  03-gray-matter.ipynb  04-chunking-plaintext.ipynb
notebooks/.ipynb_checkpoints/: 01-duckdb-vss-checkpoint.ipynb  02-model2vec-checkpoint.ipynb  04-chunking-plaintext-checkpoint.ipynb
scripts/: test_array_queries.rs  test_arrow.rs  test_chunk.rs  test_embed.rs  test_inference.rs  test_kv_table.rs  test_lance_float_list_filter.rs  test_lance_fts_hybrid.rs  test_lance_inspect.rs  test_lance_metadata.rs  test_lance_mv_only.arrow  test_lance_repro_from_disk.rs  test_lance_repro_panic.rs  test_lance_roundtrip.rs  test_lance_standalone_repro.rs  test_lance_vector_search.rs  test_lance_vs_datafusion_float_list.rs  test_lance_where.rs  test_parquet.rs  test_path_scoped_validation.rs  test_scan.rs  test_search.rs  test_tables.rs  test_toml.rs  test_toml_frontmatter_pod.rs  test_tomljson.rs  test_tomljson_decode.rs  test_tomljson_writer.rs  test_tomlschema.rs  test_violation_mapping.rs  test_widening.rs
skills/mdvs/: SKILL.md
src/: block.rs  chunk.rs  db.rs  embed.rs  frontmatter.rs  lib.rs  main.rs  output.rs  render.rs  search.rs  step.rs  table.rs  types.rs
src/cmd/: build.rs  check.rs  clean.rs  info.rs  init.rs  mod.rs  search.rs  update.rs
src/discover/: field_type.rs  infer.rs  mod.rs  scan.rs
src/index/: backend.rs  chunk.rs  embed.rs  mod.rs  storage.rs
src/outcome/: classify.rs  config.rs  embed.rs  index.rs  infer.rs  mod.rs  model.rs  scan.rs  search.rs  validate.rs
src/pipeline/: classify.rs  delete_index.rs  embed.rs  execute_search.rs  infer.rs  load_model.rs  mod.rs  read_config.rs  read_index.rs  scan.rs  validate.rs  write_config.rs  write_index.rs
src/schema/: config.rs  constraints.rs  lock.rs  mod.rs  shared.rs
tests/fixtures/: daily-note.md  frontmatter-heavy.md  (+9 more)
(+361 files in other folders)
