[package]
name = "mdvs"
version = "0.2.0"
edition = "2021"
description = "A database of markdown documents — schema validation and semantic search"
license = "MIT"
repository = "https://github.com/edochi/mdvs"
homepage = "https://edochi.github.io/mdvs/"
readme = "README.md"
keywords = ["markdown", "search", "embeddings", "semantic", "vector"]
categories = ["command-line-utilities", "text-processing"]
include = ["src/", "Cargo.toml", "Cargo.lock", "LICENSE", "README.md"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async (required by DataFusion)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Query engine (re-exports arrow 57 + parquet 57)
datafusion = { version = "52", default-features = false, features = [
    "parquet",
    "sql",
    "nested_expressions",
    "string_expressions",
    "datetime_expressions",
    "regex_expressions",
    "recursive_protection",
] }

# Error handling
anyhow = "1"

# Frontmatter
gray_matter = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
toml_edit = "0.22"

# Chunking + text
text-splitter = { version = "0.29", features = ["markdown"] }
pulldown-cmark = "0.13"
regex = "1"

# Embedding
model2vec-rs = "0.1.4"

# Inference (tree algorithm)
indextree = "4"

# File walking + glob + ignore
ignore = "0.4"
globset = "0.4"

# IDs + hashing
uuid = { version = "1", default-features = false, features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Table rendering
tabled = "0.20"
terminal_size = "0.4"

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.4"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3"

[profile.dist]
inherits = "release"
lto = "thin"

[package.metadata.dist]
dist = true
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    # "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    # "x86_64-pc-windows-msvc",
]

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
