[workspace]
members = ["crates/mdvs", "crates/tomljson"]
resolver = "3"

[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"

# lance-encoding's build.rs invokes prost-build, which needs the `protoc`
# binary on PATH. The CI workflows (ci.yml, audit.yml) install it via a
# manual step; cargo-dist's release.yml uses this dependencies map so the
# matrix.packages_install step picks the right package per OS.
[workspace.metadata.dist.dependencies.homebrew]
protobuf = '*'

[workspace.metadata.dist.dependencies.apt]
protobuf-compiler = '*'
