[package]
name = "mdvs-schema"
version = "0.1.0"
edition = "2024"
description = "Field definitions, type system, and frontmatter field discovery for mdvs"

[dependencies]
chrono = "0.4"
globset = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indextree = "4.7"
toml = "0.8"
