[package]
name = "mdvs"
version = "0.3.0"
edition = "2024"
description = "Semantic search over directories of markdown files"

[dependencies]
mdvs-schema = { path = "../mdvs-schema" }
mfv = { path = "../mfv" }
anyhow = "1"
arrow = "54"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
datafusion = "44"
model2vec-rs = "*"
parquet = "54"
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
text-splitter = { version = "0.16", features = ["markdown"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3"
