[package]
name = "mdvs"
version = "0.8.2"
edition = "2024"
description = "A database of markdown documents — schema validation and semantic search"
license = "MIT"
repository = "https://github.com/edochi/mdvs"
homepage = "https://edochi.github.io/mdvs/"
readme = "../../README.md"
keywords = ["markdown", "search", "embeddings", "semantic", "vector"]
categories = ["command-line-utilities", "text-processing"]
include = ["src/", "scaffolding/", "CHANGELOG.md", "Cargo.toml", "LICENSE"]

[features]
# Enables a deterministic mock embedder selectable via
# `[embedding_model].provider = "mock"`. Off by default so the
# production binary cannot select it. Enabled in CI for the
# hermetic fast-lane test suite (TODO-0184).
testing-mocks = []

# Gates the examples in `examples/` (dev-only probes that touch
# LanceDB / pipeline internals). Off by default so `cargo build
# --all-targets` and `cargo clippy --all-targets` skip them.
# Run a probe explicitly with:
#   cargo run --features dev-examples --example probe_lance_incremental
dev-examples = []

# --- Example targets -------------------------------------------------
# Both examples require `dev-examples` so they're never built unless
# asked. Cargo's auto-discovery still picks them up by filename; the
# `required-features` line is what excludes them from default / all-
# targets builds.

[[example]]
name = "probe_lance_incremental"
required-features = ["dev-examples"]

[[example]]
name = "profile_pipeline"
required-features = ["dev-examples"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async (required by DataFusion)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Embedded vector DB (storage + search). TODO-0016. Pins arrow 58.
lancedb = "0.29"

# Arrow in-memory columnar format (RecordBatch construction). Version
# matches lancedb's arrow.
arrow = "58"

# Full-text search query type (not re-exported from lancedb). Exact pin
# matches lancedb 0.29's lance-index dependency.
lance-index = "=6.0.0"

# Stream combinators for collecting LanceDB query result streams.
futures = "0.3"

# Error handling
anyhow = "1"

# Frontmatter
gray_matter = { version = "0.3", features = ["toml", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
toml_edit = "0.25"
tomljson = { path = "../tomljson", version = "0.1" }

# JSON Schema validation
jsonschema = "0.46"

# Chunking + text
text-splitter = { version = "0.30", features = ["markdown"] }
pulldown-cmark = "0.13"
regex = "1"

# Embedding
model2vec-rs = "0.1.4"

# Inference (tree algorithm)
indextree = "4"

# File walking + glob + ignore
ignore = "0.4"
globset = "0.4"

# IDs + hashing
uuid = { version = "1", default-features = false, features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Table rendering
tabled = "0.20"
terminal_size = "0.4"

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.4"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

# Compile-time-verified regex patterns. Used by the `--where` translator
# in `index/backend.rs` so a typo in a pattern fails `cargo build`, not at
# runtime. See TODO-0180.
lazy-regex = "3"

# SQL parser for the `--where` translator. AST-based rewriting (column
# qualification, array-field equality → array_has, etc.) instead of regex
# pattern-matching, which compounds in fragility with each new rule. Pin
# matches the version Lance/DataFusion already pull in transitively, so
# rewrite output stays parseable by the downstream filter engine.
sqlparser = "0.61"

# Embeds the `scaffolding/` directory into the binary at build time. Lets
# `scaffold::Platform::load` and `Platform::list` read bundled
# `platforms/<name>/platform.toml` files without any disk access at run
# time.
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"

[package.metadata.dist]
dist = true
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    # "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    # "x86_64-pc-windows-msvc",
]
